--- a/src/server/general.scss
+++ b/src/server/general.scss
@@ -68,6 +68,7 @@ body {
  */
 .modal {
   background-color: var(--primary-background) !important;
+  position: relative !important;
   .modal-title, h4 {
     color: var(--primary-yellow) !important;
   }
